# ml-mini-platform

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: config.py  main.py
app/db/: models.py  session.py
app/middleware/: error_handler.py
app/models/: pydantic_models.py
app/routes/: dataset.py  model.py
app/utils/: constants.py  object_storage.py  preprocessing.py  problem_type.py  string_utils.py
